package catalogue;

public interface IComponent {
    String getName();

    int countOfItems();

    void listItems();
}
